--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,10 +4,9 @@
 
 input,
 select {
-  border: 1px solid green !important;
+  border: 1px solid grey !important;
   height: 54px;
   padding-left: 5px;
-  color: blue;
   border-radius: 14px;
 }
 input {
@@ -23,11 +22,27 @@ input {
   background-color: cornflowerblue;
   color: #fff;
   height: 60px;
-  width: 300px;
+  width: 200px;
 }
 .btn-danger {
   background-color: red;
   color: #fff;
   height: 60px;
-  width: 300px;
+  width: 200px;
+}
+.btn-grey {
+  background-color: dimgray;
+  color: #fff;
+  height: 60px;
+  width: 200px;
+}
+.btn-secondary {
+  color: #fff;
+  height: 60px;
+  width: 200px;
+  background-color: darkseagreen;
+}
+
+.unlocked::placeholder {
+  background-color: rgb(254, 254, 201);
 }
